add samples to website

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@ layout: default
 
  <ul>
    <li> <a href="{{base}}/tutorial/rx/index.html"> Rx Tutorial</a> (sample structure)
- <ul>
+ </ul>
+
+ <h2>RxJS samples</h2>
+
+    <ul>
+        <li> <a href="{{base}}/sample/rxdiag/delay.html"> RxDiag (delay, 500ms) </a>
+        <li> <a href="{{base}}/sample/rxmorse/rxmorse.html"> RxMorse </a>
+    </ul>
+
 
 </div>
