--- a/sample/rxdiag/delay.html
+++ b/sample/rxdiag/delay.html
@@ -12,6 +12,7 @@ layout: default
 <div id="grey" style="background-color: #e8e8e8; padding-left: 50px ">
     <!-- -->
 </div>
+<small> click to restart</small>
 
 <script>
     // 4 events, onComplete
