--- a/sample/rxmorse/rxmorse.html
+++ b/sample/rxmorse/rxmorse.html
@@ -21,8 +21,8 @@ layout: default
     <div style="float: left; width: 250px; margin-right: 10px">
 
             <div id="pad-container">
-                <div id="pad" style="background-color: lavender; height: 250px; ">
-
+                <div id="pad" style="background-color: lavender; height: 250px; text-align: center; color: #aaa; font-size: small; padding-top: 100px">
+			<span>Click or press space bar to send message</span>
                 </div>
             </div>
 
@@ -47,17 +47,16 @@ layout: default
     <!-- control -->
 
     <div style="width: 600px; float: left; margin-right: 10px">
-        <input id="text" style="display: block; width: 100%; "/>
+        <input id="text" style="display: block; width: 100%; " placeholder="Type your message and press <ENTER>"/>
     </div>
 
     <div style="width: 150px; float: left;">
-        <button id="button" style="display: block; width: 100%;">Send SOS!</button>
+        <button id="button" style="display: block; width: 100%;" title="Click to send predefined message">Send SOS!</button>
     </div>
 
     <div style="clear: both;  width: 760px;"></div>
 
 </div>
-
 
 <audio id="speaker" src="./wavTones.com.unregistred.sin_500Hz_-20dBFS_3s.wav"></audio>
 
