--- a/sample/rxdiag/delay.html
+++ b/sample/rxdiag/delay.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/4.0.7/rx.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/4.0.7/rx.time.js"></script>
 <script src="./rx.diag.js"></script>
